--- a/paperlessWebUI/index.html
+++ b/paperlessWebUI/index.html
@@ -2,62 +2,27 @@
 <html>
 <head>
     <title>My Web Page</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+    <script>
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
+    </script>
 </head>
 <body>
     <h1>Hello, World!</h1>
     <button id="fetchDataButton">Fetch Data from API</button>
     <div id="apiResponse"></div>
-    <h2>Submit a Document</h2>
+    <h2>Upload a PDF</h2>
     <form id="documentForm">
-        <label for="title">Title:</label><br>
-        <input type="text" id="title" name="title" required><br><br>
-
-        <label for="content">Content:</label><br>
-        <textarea id="content" name="content" required></textarea><br><br>
+        <label for="pdfFile">Select PDF:</label><br>
+        <input type="file" id="pdfFile" name="pdfFile" accept="application/pdf" required><br><br>
 
         <button type="submit">Submit Document</button>
     </form>
 
     <div id="postResponse"></div>
     <script>
-    document.getElementById('fetchDataButton').addEventListener('click', () => {
-            // Make a GET request to the API endpoint
+        document.getElementById('fetchDataButton').addEventListener('click', () => {
             fetch('http://localhost:8081/api/document')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.json(); // Assuming the response is JSON
-                })
-                .then(data => {
-                    // Display the data in the <div> element
-                    document.getElementById('apiResponse').innerText = JSON.stringify(data, null, 2);
-                })
-                .catch(error => {
-                    console.error('There was a problem with the fetch operation:', error);
-                });
-        });
-        document.getElementById('documentForm').addEventListener('submit', (e) => {
-            e.preventDefault(); // Prevent form from submitting traditionally
-
-            // Get form values
-            const title = document.getElementById('title').value;
-            const content = document.getElementById('content').value;
-
-            // Create the DocumentDTO object to send to the API
-            const documentDTO = {
-                Title: title,
-                Content: content
-            };
-
-            // Make a POST request to the API endpoint
-            fetch('http://localhost:8081/api/document', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(documentDTO)
-            })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
@@ -65,14 +30,71 @@
                     return response.json();
                 })
                 .then(data => {
-                    document.getElementById('postResponse').innerText = "Document submitted successfully!";
+                    document.getElementById('apiResponse').innerText = JSON.stringify(data, null, 2);
                 })
                 .catch(error => {
-                    console.error('There was a problem with the POST operation:', error);
-                    document.getElementById('postResponse').innerText = "Error submitting document!";
+                    console.error('There was a problem with the fetch operation:', error);
                 });
         });
 
+        document.getElementById('documentForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const fileInput = document.getElementById('pdfFile');
+            const file = fileInput.files[0];
+
+            if (file && file.type === 'application/pdf') {
+                const reader = new FileReader();
+                reader.onload = async function (event) {
+                    const pdfData = event.target.result;
+
+                    // Extract the filename (without extension) for the title
+                    const title = file.name.replace('.pdf', '');
+
+                    // Load the PDF using pdf.js
+                    const loadingTask = pdfjsLib.getDocument({ data: pdfData });
+                    const pdf = await loadingTask.promise;
+                    let content = '';
+
+                    for (let i = 1; i <= pdf.numPages; i++) {
+                        const page = await pdf.getPage(i);
+                        const textContent = await page.getTextContent();
+                        textContent.items.forEach(item => {
+                            content += item.str + ' ';
+                        });
+                    }
+
+                    const documentDTO = {
+                        Title: title,
+                        Content: content.trim()
+                    };
+
+                    fetch('http://localhost:8081/api/document', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(documentDTO)
+                    })
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error('Network response was not ok');
+                            }
+                            return response.json();
+                        })
+                        .then(data => {
+                            document.getElementById('postResponse').innerText = "Document submitted successfully!";
+                        })
+                        .catch(error => {
+                            console.error('There was a problem with the POST operation:', error);
+                            document.getElementById('postResponse').innerText = "Error submitting document!";
+                        });
+                };
+                reader.readAsArrayBuffer(file);
+            } else {
+                document.getElementById('postResponse').innerText = "Please upload a valid PDF file.";
+            }
+        });
     </script>
 </body>
 </html>
