--- a/paperlessWebUI/index.html
+++ b/paperlessWebUI/index.html
@@ -2,20 +2,16 @@
 <html>
 <head>
     <title>My Web Page</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-    <script>
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
-    </script>
 </head>
 <body>
     <h1>Hello, World!</h1>
     <button id="fetchDataButton">Fetch Data from API</button>
     <div id="apiResponse"></div>
-    <h2>Upload a PDF</h2>
-    <form id="documentForm">
-        <label for="pdfFile">Select PDF:</label><br>
-        <input type="file" id="pdfFile" name="pdfFile" accept="application/pdf" required><br><br>
 
+    <h2>Upload a Document</h2>
+    <form id="documentForm" enctype="multipart/form-data">
+        <label for="documentFile">Select Document:</label><br>
+        <input type="file" id="documentFile" name="documentFile" required><br><br>
         <button type="submit">Submit Document</button>
     </form>
 
@@ -37,62 +33,35 @@
                 });
         });
 
-        document.getElementById('documentForm').addEventListener('submit', async (e) => {
+        document.getElementById('documentForm').addEventListener('submit', (e) => {
             e.preventDefault();
 
-            const fileInput = document.getElementById('pdfFile');
+            const formData = new FormData();
+            const fileInput = document.getElementById('documentFile');
             const file = fileInput.files[0];
 
-            if (file && file.type === 'application/pdf') {
-                const reader = new FileReader();
-                reader.onload = async function (event) {
-                    const pdfData = event.target.result;
+            if (file) {
+                formData.append('file', file);  // Append the file to form data
 
-                    // Extract the filename (without extension) for the title
-                    const title = file.name.replace('.pdf', '');
-
-                    // Load the PDF using pdf.js
-                    const loadingTask = pdfjsLib.getDocument({ data: pdfData });
-                    const pdf = await loadingTask.promise;
-                    let content = '';
-
-                    for (let i = 1; i <= pdf.numPages; i++) {
-                        const page = await pdf.getPage(i);
-                        const textContent = await page.getTextContent();
-                        textContent.items.forEach(item => {
-                            content += item.str + ' ';
-                        });
-                    }
-
-                    const documentDTO = {
-                        Title: title,
-                        Content: content.trim()
-                    };
-
-                    fetch('http://localhost:8081/api/document', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(documentDTO)
+                fetch('http://localhost:8081/api/document', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok');
+                        }
+                        return response.json();
                     })
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error('Network response was not ok');
-                            }
-                            return response.json();
-                        })
-                        .then(data => {
-                            document.getElementById('postResponse').innerText = "Document submitted successfully!";
-                        })
-                        .catch(error => {
-                            console.error('There was a problem with the POST operation:', error);
-                            document.getElementById('postResponse').innerText = "Error submitting document!";
-                        });
-                };
-                reader.readAsArrayBuffer(file);
+                    .then(data => {
+                        document.getElementById('postResponse').innerText = "Document submitted successfully!";
+                    })
+                    .catch(error => {
+                        console.error('There was a problem with the POST operation:', error);
+                        document.getElementById('postResponse').innerText = "Error submitting document!";
+                    });
             } else {
-                document.getElementById('postResponse').innerText = "Please upload a valid PDF file.";
+                document.getElementById('postResponse').innerText = "Please upload a valid document file.";
             }
         });
     </script>
