--- a/paperlessWebUI/index.html
+++ b/paperlessWebUI/index.html
@@ -1,79 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Web Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Hello, World!</h1>
-    <button id="fetchDataButton">Fetch Data from API</button>
-    <div id="apiResponse"></div>
+<body class="bg-light">
 
-    <h2>Upload a Document</h2>
-    <form id="documentForm" enctype="multipart/form-data">
-        <label for="documentFile">Select Document:</label><br>
-        <input type="file" id="documentFile" name="documentFile" required><br><br>
-        <button type="submit">Submit Document</button>
-    </form>
+    <div class="container mt-4">
+        <h1 class="text-center mb-4">Document Management</h1>
 
-    <div id="postResponse"></div>
+        <!-- Upload Form -->
+        <div class="card mb-4">
+            <div class="card-body">
+                <h3>Upload a Document</h3>
+                <form id="documentForm" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label for="documentFile" class="form-label">Select Document:</label>
+                        <input type="file" id="documentFile" name="documentFile" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit Document</button>
+                </form>
+                <div id="postResponse" class="mt-3 text-danger"></div>
+            </div>
+        </div>
+
+        <!-- Search Bar -->
+        <div class="input-group mb-3">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search documents...">
+        </div>
+
+        <!-- Document List -->
+        <div id="documentList" class="list-group">
+            <!-- Documents will be displayed here -->
+        </div>
+    </div>
+
     <script>
-        document.getElementById('fetchDataButton').addEventListener('click', () => {
-            fetch('http://localhost:8081/api/document')
+        const apiBaseUrl = 'http://localhost:8081/api/document';
+
+        // Function to fetch and display all documents
+        function fetchAllDocuments() {
+            fetch(apiBaseUrl)
+                .then(response => response.json())
+                .then(data => displayDocuments(data))
+                .catch(error => {
+                    console.error('Error fetching documents:', error);
+                    document.getElementById('documentList').innerHTML = '<div class="alert alert-danger">Failed to fetch documents.</div>';
+                });
+        }
+
+        // Function to search for documents
+        function searchDocuments(query) {
+            fetch(`${apiBaseUrl}/Search?query=${encodeURIComponent(query)}`)
                 .then(response => {
+                    console.log(response);
                     if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                        throw new Error('No documents found.');
                     }
                     return response.json();
                 })
-                .then(data => {
-                    document.getElementById('apiResponse').innerText = JSON.stringify(data, null, 2);
-                })
+                .then(data => displayDocuments(data))
                 .catch(error => {
-                    console.error('There was a problem with the fetch operation:', error);
+                    console.error('Error searching documents:', error);
+                    document.getElementById('documentList').innerHTML = '<div class="alert alert-warning">No documents found.</div>';
                 });
+        }
+
+        // Function to display documents in the list
+        function displayDocuments(documents) {
+            const documentList = document.getElementById('documentList');
+            documentList.innerHTML = ''; // Clear current list
+
+            if (documents.length === 0) {
+                documentList.innerHTML = '<div class="alert alert-warning">No documents available.</div>';
+                return;
+            }
+
+            documents.forEach(doc => {
+                const item = document.createElement('a');
+                item.href = "#";
+                item.className = "list-group-item list-group-item-action";
+                item.textContent = `${doc.title || 'Untitled Document'}`;
+                documentList.appendChild(item);
+            });
+        }
+
+        // Event listener for search input
+        document.getElementById('searchInput').addEventListener('input', (e) => {
+            const query = e.target.value;
+            if (query.trim()) {
+                searchDocuments(query);
+            } else {
+                fetchAllDocuments(); // Reset to all documents when query is empty
+            }
         });
 
+        // Event listener for document form submission
         document.getElementById('documentForm').addEventListener('submit', (e) => {
             e.preventDefault();
-
             const formData = new FormData();
             const fileInput = document.getElementById('documentFile');
             const file = fileInput.files[0];
 
             if (file) {
-                formData.append('file', file);  // Append the file to form data
+                formData.append('file', file);
 
-                fetch('http://localhost:8081/api/document', {
+                fetch(apiBaseUrl, {
                     method: 'POST',
                     body: formData
                 })
-                    .then(response => {
-                        if (!response.ok) {
-                            return response.json().then(errorData => {
-                                throw errorData; // Werfe die Fehlerdetails, um sie im Catch zu behandeln
-                            });
-                        }
-                        return response.json();
+                    .then(response => response.json())
+                    .then(() => {
+                        document.getElementById('postResponse').innerHTML = '<div class="text-success">Document submitted successfully!</div>';
+                        fetchAllDocuments(); // Refresh the document list
                     })
-                    .then(data => {
-                        document.getElementById('postResponse').innerText = "Document submitted successfully!";
-                    })
-                    .catch(errorArray => {
-                        console.error('Error Response:', errorArray);
-
-                        if (Array.isArray(errorArray)) {
-                            // Extrahiere die Fehlernachrichten aus dem Array
-                            const errorMessages = errorArray.map(error => `${error.propertyName}: ${error.errorMessage}`);
-                            document.getElementById('postResponse').innerText = errorMessages.join("\n");
-                        } else {
-                            // Fallback für unerwartete Fehler
-                            document.getElementById('postResponse').innerText = "An unexpected error occurred.";
-                        }
+                    .catch(error => {
+                        console.error('Error submitting document:', error);
+                        document.getElementById('postResponse').innerHTML = '<div class="text-danger">Failed to submit document.</div>';
                     });
             } else {
-                document.getElementById('postResponse').innerText = "Please upload a valid document file.";
+                document.getElementById('postResponse').textContent = 'Please select a document to upload.';
             }
         });
+
+        // Initial fetch of all documents on page load
+        fetchAllDocuments();
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
