--- a/paperlessWebUI/index.html
+++ b/paperlessWebUI/index.html
@@ -79,10 +79,19 @@
             }
 
             documents.forEach(doc => {
-                const item = document.createElement('a');
-                item.href = "#";
-                item.className = "list-group-item list-group-item-action";
-                item.textContent = `${doc.title || 'Untitled Document'}`;
+                const item = document.createElement('div');
+                item.className = "list-group-item d-flex justify-content-between align-items-center";
+
+                const title = document.createElement('span');
+                title.textContent = doc.title || 'Untitled Document';
+
+                const downloadButton = document.createElement('a');
+                downloadButton.href = `${apiBaseUrl}/download/${doc.id}`;
+                downloadButton.className = "btn btn-outline-primary btn-sm";
+                downloadButton.textContent = "Download";
+
+                item.appendChild(title);
+                item.appendChild(downloadButton);
                 documentList.appendChild(item);
             });
         }
